...
                android:textColor="#757575"
                android:textSize="12sp"
                android:visibility="gone" />
            
            <!-- Comment Content -->
            <TextView
                android:id="@+id/commentContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="13sp"
                android:textColorLink="@color/fastcomments_link_color"
                android:autoLink="web"
...
